--- a/packages/webapp/src/ui/styles/utils/_colors.scss
+++ b/packages/webapp/src/ui/styles/utils/_colors.scss
@@ -3,7 +3,7 @@ $base-light-red-color: rgb(255, 49, 49);
 $base-moodle-color: #f88012;
 $base-electric-blue-color: #337aff;
 $base-black-color: #000;
-$base-grey-color: #a3a6b5;
+$base-grey-color: #687082;
 $base-white-color: #fff;
 
 $primary-color: $base-moodle-color;
